# altimeter-filter

./: Cargo.toml  Makefile  README.md  build.rs  imgui.ini  test-flight-4-12-2025_flight-only.csv
AltimeterFilter/: AltimeterFilter.cpp  AltimeterFilter.h
Cpp/: Makefile
Cpp/AltimeterFilter/: AltimeterFilter.cpp
Cpp/UKF/: UKF.cpp  UKF.h
src/: AltimeterFilter.c  AltimeterFilter.cpp  AltimeterFilter.h  main.cpp  main.rs  visualizer.cpp
src/airbrakes/: AltimeterFilter.cpp  AltimeterFilter.h  airbrakes.cpp  airbrakes.h
