[package]
name = "altimeter-filter"
version = "0.1.0"
edition = "2024"
include = ["src/AltimeterFilter.cpp", "src/AltimeterFilter.h"]

[dependencies]
csv = "1.3.1"
eframe = "0.31.1"
egui_plot = "0.32.1"
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.19"
